header overlapping with menu fix

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -32,6 +32,7 @@ header {
     right: 0;
   }
   .header_p {
+    top: 100px;
     margin-left: 1rem;
     align-self: start;
     white-space: nowrap
